Minor bug fix in dark mode handling

--- a/verdocs-web-sdk/src/components/embeds/verdocs-auth/verdocs-auth.scss
+++ b/verdocs-web-sdk/src/components/embeds/verdocs-auth/verdocs-auth.scss
@@ -26,6 +26,7 @@ verdocs-auth {
   }
 
   h3 {
+    color: $verdocs-grey-0;
     text-align: center;
     font-weight: 400;
     font-size: 18px;
@@ -76,6 +77,7 @@ verdocs-auth {
   }
 
   p {
+    color: $verdocs-grey-0;
     margin: 1em 0;
     font-size: 14px;
   }
@@ -94,6 +96,7 @@ verdocs-auth {
   }
 
   .already-have {
+    color: $verdocs-grey-0;
     margin: 0.5em 0;
     font-size: 14px;
   }
